@@ -5,6 +5,7 @@ XMPP4R 0.3 (**/**/****)
 * Multi-User Chat Helpers
 * Helpers for File-Transfer, SOCKS5 Bytestreams, In-Band Bytestreams
 * Helpers::Version moved to Helpers::SimpleVersion
+* Helpers::Roster has modified subscription-request semantics (see Roster#add_subscription_request_callback)
 
 XMPP4R 0.2 (20/10/2005)
 =======================
